syntax = "proto3";
package proto;

service Webhook {

    rpc Register (WebhookRequest) returns (WebhookResponse) {}

    rpc Remove (WebhookRequest) returns (WebhookResponse) {}

}

message WebhookRequest {
    string payloadURL = 1;
}

message WebhookResponse {
    string message = 1;
}